--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -11,20 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-08-31 22:16:49.799078: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: SSE4.1 SSE4.2, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -35,9 +26,9 @@
     "import tensorflow as tf\n",
     "from tqdm import *\n",
     "import os\n",
-    "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"3\" \n",
-    "# physical_devices = tf.config.list_physical_devices('GPU') \n",
-    "# tf.config.experimental.set_memory_growth(physical_devices[0], True)\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"3\" \n",
+    "physical_devices = tf.config.list_physical_devices('GPU') \n",
+    "tf.config.experimental.set_memory_growth(physical_devices[0], True)\n",
     "\n",
     "\n",
     "\n",
@@ -761,7 +752,6 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "ff425187",
    "metadata": {},
    "outputs": [
     {
@@ -1306,9 +1296,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "gaia",
    "language": "python",
-   "name": "python3"
+   "name": "gaia"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1320,7 +1310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
